--- a/index.html
+++ b/index.html
@@ -3,21 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>your name</title>
+    <title>gabriel mousa</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
-        <a href="#home">home</a>
-        <a href="#blog">blog</a>
-        <a href="#life">life</a>
-        <a href="#resume">resume</a>
-        <a href="#ideas">ideas</a>
+        <div class="nav-name">gabriel mousa</div>
+        <div class="nav-links">
+            <a href="#home">home</a>
+            <a href="#blog">blog</a>
+            <a href="#life">life</a>
+            <a href="#resume">resume</a>
+            <a href="#ideas">ideas</a>
+        </div>
     </nav>
 
     <section id="home">
         <div class="content">
-            <h1>hey there! ✨</h1>
+            <h1>hey there</h1>
             <p>welcome to my little corner of the internet</p>
         </div>
     </section>
@@ -73,10 +76,10 @@
             <h2>life</h2>
             <p>things i love and enjoy</p>
             <ul>
-                <li>☕ coffee in the morning</li>
-                <li>📚 reading good books</li>
-                <li>🎵 discovering new music</li>
-                <li>🌱 learning new things</li>
+                <li>coffee in the morning</li>
+                <li>reading good books</li>
+                <li>discovering new music</li>
+                <li>learning new things</li>
             </ul>
         </div>
     </section>
@@ -94,14 +97,15 @@
             <h2>ideas</h2>
             <p>random thoughts and projects i'm thinking about</p>
             <div class="idea-grid">
-                <div class="idea-card">💡 build something cool</div>
-                <div class="idea-card">🚀 learn a new skill</div>
-                <div class="idea-card">🎨 creative project</div>
-                <div class="idea-card">🌍 travel somewhere new</div>
+                <div class="idea-card">build something cool</div>
+                <div class="idea-card">learn a new skill</div>
+                <div class="idea-card">creative project</div>
+                <div class="idea-card">travel somewhere new</div>
             </div>
         </div>
     </section>
 
+    <script src="ocean.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
