--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <div class="controls-content">
             <div class="control-group">
                 <label for="animation-speed">animation speed</label>
-                <input type="range" id="animation-speed" min="0" max="3" step="0.1" value="1">
-                <span class="value-display">1.0x</span>
+                <input type="range" id="animation-speed" min="0" max="3" step="0.1" value="0.5">
+                <span class="value-display">0.5x</span>
             </div>
             <div class="control-group">
                 <label for="wave-speed">wave speed</label>
@@ -55,7 +55,7 @@
                 <input type="range" id="pixel-size" min="3" max="12" step="1" value="6">
                 <span class="value-display">6px</span>
             </div>
-            <button id="regenerate-ocean" class="island-button">🌊 regenerate ocean</button>
+            <button id="regenerate-ocean" class="island-button">regenerate ocean</button>
         </div>
     </div>
 
