updating boat and more

--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
                 <span class="value-display">1.0x</span>
             </div>
             <div class="control-group">
+                <label for="boat-speed">boat speed</label>
+                <input type="range" id="boat-speed" min="0.5" max="5" step="0.1" value="1">
+                <span class="value-display">1.0x</span>
+            </div>
+            <div class="control-group">
                 <label for="pixel-size">pixel size</label>
                 <input type="range" id="pixel-size" min="3" max="12" step="1" value="6">
                 <span class="value-display">6px</span>
