--- a/index.html
+++ b/index.html
@@ -46,11 +46,6 @@
                 <span class="value-display">1.0x</span>
             </div>
             <div class="control-group">
-                <label for="boat-size">boat size</label>
-                <input type="range" id="boat-size" min="0.5" max="2.5" step="0.1" value="1">
-                <span class="value-display">1.0x</span>
-            </div>
-            <div class="control-group">
                 <label for="boat-speed">boat speed</label>
                 <input type="range" id="boat-speed" min="0.5" max="5" step="0.1" value="1">
                 <span class="value-display">1.0x</span>
@@ -63,6 +58,9 @@
             <button id="regenerate-ocean" class="island-button">regenerate ocean</button>
         </div>
     </div>
+
+    <!-- Sail the World Button -->
+    <button id="sail-world-button" class="sail-world-btn">sail the world!</button>
 
     <section id="home">
         <div class="content">
