--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </nav>
 
     <!-- Ocean Control Panel Island -->
-    <div id="ocean-controls" class="ocean-island-controls">
+    <div id="ocean-controls" class="ocean-island-controls collapsed">
         <div class="island-header" id="controls-toggle">
             <span class="header-text"></span>
             <span class="toggle-icon">▼</span>
