--- a/post.html
+++ b/post.html
@@ -14,6 +14,7 @@
             border-radius: 12px;
             box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
             backdrop-filter: blur(10px);
+            text-transform: none;
         }
 
         .back-link {
@@ -156,6 +157,7 @@
     </div>
 
     <script src="ocean.js"></script>
+    <script src="analytics.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="post.js"></script>
 </body>
