--- a/blog-list.html
+++ b/blog-list.html
@@ -14,6 +14,7 @@
             border-radius: 12px;
             box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
             backdrop-filter: blur(10px);
+            text-transform: none;
         }
 
         .page-header {
