adding link from name click

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <div class="nav-name">gabriel mousa</div>
+        <div class="nav-name"><a href="#home">gabriel mousa</a></div>
         <div class="nav-links">
             <a href="#home">home</a>
             <a href="#blog">blog</a>
