--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
             <h1>hi, i'm gabe</h1>
             <p>welcome to my little corner of the internet</p>
             <p>i'm a software engineer based in seattle, wa working at microsoft studying ai safety in my freetime</p>
-            <p>if you want to contact me - gab.01@hotmail.com</p>
+            <p>if you want to contact me - gab.01@hotmail.com 
+                <br><a href="https://github.com/gabe-mousa/">GitHub</a> | <a href="https://www.linkedin.com/in/GabeMousa">LinkedIn</a></p>
         </div>
     </section>
 
