adding a pause button

--- a/index.html
+++ b/index.html
@@ -59,8 +59,11 @@
         </div>
     </div>
 
-    <!-- Sail the World Button -->
-    <button id="sail-world-button" class="sail-world-btn">sail the world!</button>
+    <!-- Floating Action Buttons -->
+    <div id="floating-buttons" class="floating-buttons">
+        <button id="pause-animation-button" class="floating-btn">stop the animations</button>
+        <button id="sail-world-button" class="floating-btn">sail the world!</button>
+    </div>
 
     <section id="home">
         <div class="content">
